[tool.poetry]
name = "yelp-processing-clayton-rno"
version = "0.1.0"
description = "Project to scrape all the businesses in the Clayton neighborhood of Denver"
authors = ["Blake <blake.enyart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.2"
ipykernel = "^5.5.0"
requests = "^2.25.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
